// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeEntryWithGemini 的 prompt > 持有中＋觸犯戒律：逐字未變 1`] = `
"
【個股】2330.TW　日期 2026-01-06　收盤 1040
【使用者部位】持有中，成本價約 900
【程式濾網客觀結論】
- 日線趨勢：多頭（頭頭高底底高，近 3 波皆抬升）；週線：多頭
- 六步驟：
步驟1 趨勢研判：[✅通過] 日線多頭｜頭頭高；底底高
步驟2 當下位置：[⚠️警示] 主升段偏高檔｜距波段起漲 +18%
步驟3 K線轉折：[❌不符] 無關鍵進場K｜實體過短；未過前高
- 選股SOP 6必要條件：
✓ 月線之上
✗ 攻擊量
- 進場口訣：回後買上漲
- 戒律檢核：戒律3：不可追高追價；戒律7：不可在高檔爆量後進場
- 最終決策：WAIT（信心 55/100）
- 建議進場價 1035
- 停損雙軌擇一（擇一為主要防守，收盤跌破即出場）：
  ① 固定停損 983.25（進場價 -5%）
  ② 關鍵均線防守 1000（中長線MA20）
- 停利規則：跌破 MA10 收盤出場，或漲幅達 20% 減半
"
`;

exports[`analyzeEntryWithGemini 的 prompt > 持有中＋觸犯戒律：逐字未變 2`] = `
{
  "mode": "fast",
  "temperature": 0.2,
  "thinkingConfig": {
    "thinkingLevel": "MEDIUM",
  },
}
`;

exports[`analyzeEntryWithGemini 的 prompt > 空手＋未觸犯戒律（無週線／無均線防守價）：逐字未變 1`] = `
"
【個股】AAPL　日期 2026-01-05　收盤 325.89
【使用者部位】目前空手（評估是否進場）
【程式濾網客觀結論】
- 日線趨勢：盤整（近 20 日高低點交錯，無明確方向）
- 六步驟：
步驟1 趨勢研判：[⚠️警示] 盤整｜區間 310~330
- 選股SOP 6必要條件：
✓ 月線之上
- 進場口訣：皆不符
- 戒律檢核：未觸犯任何戒律
- 最終決策：NO_GO（信心 30/100）
- 建議進場價 0
- 停損雙軌擇一（擇一為主要防守，收盤跌破即出場）：
  ① 固定停損 0（進場價 -5%）
  ② 關鍵均線防守 —（中長線MA20）
- 停利規則：不進場，無停利規則
"
`;

exports[`analyzeEntryWithGemini 的 prompt > 空手＋未觸犯戒律（無週線／無均線防守價）：逐字未變 2`] = `
{
  "mode": "thinking",
  "temperature": 0.2,
  "thinkingConfig": undefined,
}
`;

exports[`analyzeFundamentals 的 prompt > 含 null 欄位（走 N/A）：逐字未變 1`] = `
"
【公司基本資料】
股名：台積電　代碼：2330　產業：半導體業　資料日期：2026-01-06

【估值指標】（資料日 2026-01-05）
PER：22.50　PBR：6.10　現金殖利率：1.42%

【近 8 季損益（季別｜營收億｜毛利率｜營益率｜淨利率｜EPS）】
2025Q3｜營收 7593.20 億｜毛利率 57.80%｜營益率 47.50%｜淨利率 42.80%｜EPS 12.54 元
2025Q4｜營收 8123.70 億｜毛利率 N/A｜營益率 N/A｜淨利率 N/A｜EPS N/A 元

【近 13 月營收（月份｜營收億｜YoY）】
2025-11｜營收 2760.30 億｜YoY 26.40%
2025-12｜營收 2890.10 億｜YoY N/A

【資產負債摘要】（資料日 2025-12-31）
現金 21500.40 億｜流動資產 28000.20 億｜總資產 78000.30 億｜總負債 24000.10 億｜股東權益 54000.20 億｜負債比 30.77%

【現金流量摘要】（年度累計至 2025-12-31，非單季數字）
營業現金流 15200.80 億｜投資現金流 -9800.40 億｜籌資現金流 -2100.60 億｜資本支出 -9500.20 億｜自由現金流(FCF) 5700.60 億

【股利發放紀錄（近 5 期）】
2025Q2｜現金股利 4.5 元｜股票股利 0 元｜除息日 2025-09-18
2025Q3｜現金股利 5 元｜股票股利 0 元｜除息日 N/A
"
`;

exports[`analyzeFundamentals 的 prompt > 含 null 欄位（走 N/A）：逐字未變 2`] = `
{
  "mode": "fast",
  "temperature": 0.3,
  "thinkingConfig": {
    "thinkingBudget": 4096,
  },
}
`;

exports[`analyzePortfolioHealth 的 prompt > 完整 prompt 逐字未變（含 formatHealthCheckData 快照鎖不到的外層包裝詞） 1`] = `
"以下是我目前的庫存持股，請逐一進行健檢分析：

========== 持股 1：台積電（2330.TW）==========
買入均價：900.00 TWD
目前市價：1040.00 TWD
損益幅度：+15.56%
持有股數：1000
停損雙軌（擇一為主要防守，收盤跌破即出場）：① 855.00 TWD（買入均價 × 95%）② 關鍵均線防守 MA20=100.00 TWD（短線可改 MA5=102.00／波段 MA10=101.00）

【最新技術面摘要】
- 今日：開:100.00 高:105.00 低:99.00 收:104.00
- 漲跌幅：+1.96%
- K棒顏色：紅K（收漲）
- 量比（vs前日）：1.24x
- 均線排列：MA5>MA10>MA20（多頭排列）
- MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00
- KD(5,3,3): K=70.5  D=60.3  J=90.8
- MACD(10,20,10): DIF=1.23  DEA=0.99  柱=0.25
- 布林通道(20,2): 上軌=110.00  中軌=100.00  下軌=90.00
- RSI(14): N/A

近5日外資合計：6000張
近5日投信合計：1500張

【近15日K線走勢】
2026-01-02  開:100.00 高:105.00 低:99.00 收:100.00 量:20000張  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  J:90.8  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00  外資:3000張  投信:500張
2026-01-03  開:100.00 高:105.00 低:99.00 收:102.00 量:25000張  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  J:90.8  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00  外資:-1000張  投信:200張
2026-01-06  開:100.00 高:105.00 低:99.00 收:104.00 量:31000張  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  J:90.8  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00  外資:4000張  投信:800張


========== 持股 2：Apple Inc.（AAPL）==========
買入均價：250.00 USD
目前市價：325.89 USD
損益幅度：+30.36%
持有股數：10
停損雙軌（擇一為主要防守，收盤跌破即出場）：① 237.50 USD（買入均價 × 95%）② 關鍵均線防守 MA20=100.00 USD（短線可改 MA5=102.00／波段 MA10=101.00）

【最新技術面摘要】
- 今日：開:100.00 高:105.00 低:99.00 收:325.89
- 漲跌幅：+1.84%
- K棒顏色：紅K（收漲）
- 量比（vs前日）：1.16x
- 均線排列：MA5>MA10>MA20（多頭排列）
- MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00
- KD(5,3,3): K=70.5  D=60.3  J=90.8
- MACD(10,20,10): DIF=1.23  DEA=0.99  柱=0.25
- 布林通道(20,2): 上軌=110.00  中軌=100.00  下軌=90.00
- RSI(14): N/A


【近15日K線走勢】
2026-01-02  開:100.00 高:105.00 低:99.00 收:320.00 量:45,000,000股  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  J:90.8  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
2026-01-05  開:100.00 高:105.00 低:99.00 收:325.89 量:52,000,000股  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  J:90.8  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
"
`;

exports[`analyzePortfolioHealth 的 prompt > 完整 prompt 逐字未變（含 formatHealthCheckData 快照鎖不到的外層包裝詞） 2`] = `
{
  "mode": "fast",
  "temperature": 0.2,
  "thinkingConfig": {
    "thinkingBudget": 4096,
  },
}
`;

exports[`analyzeTradeDecision 的 prompt > 台股（量用「張」）＋買入當日命中日K：逐字未變 1`] = `
"
股票代號：2330.TW（台股）
買入時間：2026-01-03
買入價格：950
目前市價：1040.00（相較買入價 +9.47%）

使用者陳述的買入原因：
看到突破月線帶量，追了一張

【買入當天技術面摘要】
- 開:945.00  高:105.00  低:99.00  收:962.00
- 漲跌幅：+2.34%
- K棒顏色：紅K（收漲）
- 量比（vs前日）：1.55x
- MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00
- K(5):70.5  D(3):60.3  J:90.8
- DIF:1.23  DEA:0.99  柱狀:0.25
- 布林通道(20,2): 上軌:110.00  中軌:100.00  下軌:90.00
- 均線多空：MA5>MA10>MA20（多頭排列）

【近期走勢（最近15筆日K，含指標）】
2026-01-02  開:100.00 高:105.00 低:99.00 收:940.00 量:20000張  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
2026-01-03  開:945.00 高:105.00 低:99.00 收:962.00 量:31000張  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
2026-01-06  開:100.00 高:105.00 低:99.00 收:1040.00 量:28000張  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
"
`;

exports[`analyzeTradeDecision 的 prompt > 台股（量用「張」）＋買入當日命中日K：逐字未變 2`] = `
{
  "mode": "fast",
  "temperature": 0.3,
  "thinkingConfig": {
    "thinkingBudget": 4096,
  },
}
`;

exports[`analyzeTradeDecision 的 prompt > 美股（量用「股」）＋查無買入當日：逐字未變（含 HIGH-1 的不得靜默頂替提示） 1`] = `
"
股票代號：AAPL（美股）
買入時間：2026-01-04
買入價格：300

使用者陳述的買入原因：
（未填寫）

【買入當天技術面摘要】
- 查無買入當日（2026-01-04）的日K資料（可能為非交易日，或早於本次取得的資料範圍）。
- 本節從缺；請勿以今日或其他日期的技術面推斷買入當日狀況。

【近期走勢（最近15筆日K，含指標）】
2026-01-02  開:100.00 高:105.00 低:99.00 收:320.00 量:45,000,000股  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
2026-01-05  開:100.00 高:105.00 低:99.00 收:325.89 量:52,000,000股  MA5:102.00  MA10:101.00  MA20:100.00  MA60:95.00  K:70.5  D:60.3  DIF:1.23  DEA:0.99  柱:0.25  BB上:110.00  BB中:100.00  BB下:90.00
"
`;
